--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -61,6 +61,7 @@ JPype1 = { version = "^1.3.0", optional = true }
 pims = { version = "^0.6.0", optional = true }
 tifffile = { version = ">=2021.11.2", optional = true }
 pylibCZIrw = { version = "3.5.2", source = "scm", optional = true }
+requests = "^2.31.0"
 
 [tool.poetry.extras]
 pims = ["pims"]
