--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -28,7 +28,7 @@ classifiers = [
 include = ["webknossos/version.py"]  # included explicitly since it's in .gitignore
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.8,<=3.12"
 aiohttp = "^3.8.1"
 attrs = ">=22.0.0"
 boltons = "~21.0.0"
@@ -60,7 +60,7 @@ imagecodecs = { version = ">=2021.11.20", optional = true }
 JPype1 = { version = "^1.3.0", optional = true }
 pims = { version = "^0.6.0", optional = true }
 tifffile = { version = ">=2021.11.2", optional = true }
-pylibCZIrw = { version = "3.5.2", source = "scm", optional = true }
+pylibCZIrw = { version = "3.5.2", source = "scm", optional = true, python = ">=3.8,<3.12" }
 
 [tool.poetry.extras]
 pims = ["pims"]
