--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -41,6 +41,7 @@ natsort = "^6.2.0"
 networkx = "^2.6.2"
 numcodecs = "^0.11"
 numpy = "^1.21.0"  # see https://numpy.org/neps/nep-0029-deprecation_policy.html#support-table
+pims = "^0.6.0"
 psutil = "^5.6.7"
 python-dateutil = "^2.8.0"
 python-dotenv = "^0.19.0"
@@ -58,17 +59,15 @@ zipp = "^3.5.0"
 # below `extras`. They can be opted into by apps.
 imagecodecs = { version = ">=2021.11.20", optional = true }
 JPype1 = { version = "^1.3.0", optional = true }
-pims = { version = "^0.6.0", optional = true }
 tifffile = { version = ">=2021.11.2", optional = true }
 pylibCZIrw = { version = "3.5.2", source = "scm", optional = true }
 
 [tool.poetry.extras]
-pims = ["pims"]
-tifffile = ["pims", "tifffile"]
-imagecodecs = ["pims", "imagecodecs"]
-bioformats = ["pims","JPype1"]
-czi = ["pims", "pylibCZIrw"]
-all = ["pims","tifffile","imagecodecs","JPype1","pylibCZIrw"]
+tifffile = ["tifffile"]
+imagecodecs = ["imagecodecs"]
+bioformats = ["JPype1"]
+czi = ["pylibCZIrw"]
+all = ["tifffile","imagecodecs","JPype1","pylibCZIrw"]
 
 [tool.poetry.group.dev]
 optional = true
