--- a/webknossos/pyproject.toml
+++ b/webknossos/pyproject.toml
@@ -28,31 +28,31 @@ classifiers = [
 include = ["webknossos/version.py"]  # included explicitly since it's in .gitignore
 
 [tool.poetry.dependencies]
-python = ">=3.8,<=3.12"
+python = ">=3.9,<=3.12"
 aiohttp = "^3.8.1"
 attrs = ">=22.0.0"
-boltons = "~21.0.0"
+boltons = ">=21.0.0"
 cattrs = ">=22.0.0"
 cluster_tools = { path = "../cluster_tools/", develop = true }
 fsspec = "^2023.9.0"
-httpx = ">=0.20.0,<=0.24.1"
+httpx = "^0.27.0"
 loxun = "^2.0"
-natsort = "^6.2.0"
-networkx = "^2.6.2"
-numcodecs = "^0.11"
-numpy = "^1.21.0"  # see https://numpy.org/neps/nep-0029-deprecation_policy.html#support-table
-pims = "^0.6.0"
-psutil = "^5.6.7"
+natsort = "^8.4.0"
+networkx = "^3"
+numcodecs = "^0.12"
+numpy = "^2"
+pims = "^0.7.0"
+psutil = "^6"
 python-dateutil = "^2.8.0"
-python-dotenv = "^0.19.0"
-rich = "^10.9.0"
+python-dotenv = "^1"
+rich = "^13"
 scipy = "^1.9.0"
-typer = "0.12.3"
+typer = "^0.12"
 typing-extensions = "^4.0"
-universal-pathlib = "0.1.3"
-wkw = "1.1.22"
-zarr = "^2.16.0"
-zarrita = "0.2.2"
+universal-pathlib = "^0.2"
+wkw = "1.1.24"
+zarr = "^2.18.0"
+zarrita = "0.2.5"
 zipp = "^3.5.0"
 
 # A list of all of the optional dependencies, some of which are included in the
@@ -78,16 +78,16 @@ hypothesis = "^6.35.0"
 icecream = "^2.1.1"
 inducoapi = "^2.0.2"
 jsonschema = "^4.6.0"
-mypy = "^1.6.0"
-pytest = "^7.2.1"
+mypy = "^1.10.0"
+pytest = "^8"
 pytest-custom-exit-code = "^0.3.0"
 pytest-recording = "^0.13.0"
-pytest-split = "^0.8.0"
-pytest-sugar = "^0.9.4"
-pytest-timeout = "^2.1.0"
-pytest-timestamper = "^0.0.9"
-types-python-dateutil = "^0.1.6"
-ruff = "^0.4.0"
+pytest-split = "^0.9.0"
+pytest-sugar = "^1"
+pytest-timeout = "^2.3.0"
+pytest-timestamper = "^0.0.10"
+types-python-dateutil = "^2.9"
+ruff = "^0.5"
 
 [tool.poetry.group.examples]
 optional = true
@@ -95,12 +95,12 @@ optional = true
 [tool.poetry.group.examples.dependencies]
 # packages for examples:
 fastremap = "^1.13.3"
-pandas = "^1.3.4"
+pandas = "^2"
 pooch = "^1.5.2"
-s3fs = "^2023.9.0"
-tabulate = "^0.8.9"
+s3fs = ">=2023.9.0"
+tabulate = "^0.9"
 scikit-learn = "^1.0.1"
-scikit-image = "^0.21.0"
+scikit-image = ">=0.23.0"
 
 [[tool.poetry.source]]
 name = "PyPI"
