--- a/webknossos/tests/cassettes/test_api_client/test_annotation_info.yaml
+++ b/webknossos/tests/cassettes/test_api_client/test_annotation_info.yaml
@@ -11,11 +11,12 @@ interactions:
       host:
       - localhost:9000
       user-agent:
-      - python-httpx/0.24.1
+      - python-httpx/0.27.0
     method: GET
     uri: http://localhost:9000/api/v7/annotations/570ba0092a7c0e980056fe9b/info
   response:
-    content: '{"modified":0,"state":"Active","isLockedByOwner":false,"id":"570ba0092a7c0e980056fe9b","name":"","description":"","viewConfiguration":null,"typ":"Explorational","task":null,"stats":{},"restrictions":{"allowAccess":true,"allowUpdate":true,"allowFinish":true,"allowDownload":true},"annotationLayers":[{"tracingId":"ae417175-f7bb-4a34-8187-d9c3b50143ae","typ":"Skeleton","name":"Skeleton","stats":{"edgeCount":28965,"nodeCount":28967,"treeCount":2,"branchPointCount":0}}],"dataSetName":"2012-06-28_Cortex","organization":"Organization_X","dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"tracingStore":{"name":"localhost","url":"http://localhost:9000"},"visibility":"Internal","settings":{"allowedModes":["orthogonal","oblique","flight"],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":true,"mergerMode":false,"resolutionRestrictions":{}},"tracingTime":null,"teams":[],"tags":["2012-06-28_Cortex","skeleton"],"user":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"BoyA","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"BoyA","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"contributors":[],"othersMayEdit":false}'
+    body:
+      string: '{"modified":0,"state":"Active","isLockedByOwner":false,"id":"570ba0092a7c0e980056fe9b","name":"","description":"","viewConfiguration":null,"typ":"Explorational","task":null,"stats":{},"restrictions":{"allowAccess":true,"allowUpdate":true,"allowFinish":true,"allowDownload":true},"annotationLayers":[{"tracingId":"ae417175-f7bb-4a34-8187-d9c3b50143ae","typ":"Skeleton","name":"Skeleton","stats":{"edgeCount":28965,"nodeCount":28967,"treeCount":2,"branchPointCount":0}}],"dataSetName":"2012-06-28_Cortex","organization":"Organization_X","dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"tracingStore":{"name":"localhost","url":"http://localhost:9000"},"visibility":"Internal","settings":{"allowedModes":["orthogonal","oblique","flight"],"branchPointsAllowed":true,"somaClickingAllowed":true,"volumeInterpolationAllowed":true,"mergerMode":false,"resolutionRestrictions":{}},"tracingTime":null,"teams":[],"tags":["2012-06-28_Cortex","skeleton"],"user":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"BoyA","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"owner":{"id":"570b9f4d2a7c0e4d008da6ef","email":"user_A@scalableminds.com","firstName":"user_A","lastName":"BoyA","isAdmin":true,"isDatasetManager":true,"isAnonymous":false,"teams":[{"id":"570b9f4b2a7c0e3b008da6ec","name":"team_X1","isTeamManager":true},{"id":"59882b370d889b84020efd3f","name":"team_X3","isTeamManager":false},{"id":"59882b370d889b84020efd6f","name":"team_X4","isTeamManager":true}]},"contributors":[],"othersMayEdit":false}'
     headers:
       cache-control:
       - no-cache
@@ -28,6 +29,7 @@ interactions:
       - origin-when-cross-origin, strict-origin-when-cross-origin
       x-permitted-cross-domain-policies:
       - master-only
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
