--- a/webknossos/tests/cassettes/test_api_client/test_build_info.yaml
+++ b/webknossos/tests/cassettes/test_api_client/test_build_info.yaml
@@ -11,12 +11,13 @@ interactions:
       host:
       - localhost:9000
       user-agent:
-      - python-httpx/0.24.1
+      - python-httpx/0.27.0
     method: GET
     uri: http://localhost:9000/api/v7/buildinfo
   response:
-    content: '{"webknossos":{"name":"webknossos","ciTag":"","commitHash":"e8d5ea3dd097af5a4a7a3bb834d9da56d072ba4b","ciBuild":"28678","scalaVersion":"2.13.11","version":"28678","sbtVersion":"1.9.6","datastoreApiVersion":"2.0","commitDate":"Thu
-      Jul 11 15:58:32 2024 +0200"},"schemaVersion":117,"httpApiVersioning":{"currentApiVersion":7,"oldestSupportedApiVersion":3},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}'
+    body:
+      string: '{"webknossos":{"name":"webknossos","ciTag":"","commitHash":"e8d5ea3dd097af5a4a7a3bb834d9da56d072ba4b","ciBuild":"28678","scalaVersion":"2.13.11","version":"28678","sbtVersion":"1.9.6","datastoreApiVersion":"2.0","commitDate":"Thu
+        Jul 11 15:58:32 2024 +0200"},"schemaVersion":117,"httpApiVersioning":{"currentApiVersion":7,"oldestSupportedApiVersion":3},"localDataStoreEnabled":true,"localTracingStoreEnabled":true}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -31,6 +32,7 @@ interactions:
       - origin-when-cross-origin, strict-origin-when-cross-origin
       x-permitted-cross-domain-policies:
       - master-only
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
