--- a/webknossos/tests/cassettes/test_api_client/test_dataset_info.yaml
+++ b/webknossos/tests/cassettes/test_api_client/test_dataset_info.yaml
@@ -11,18 +11,19 @@ interactions:
       host:
       - webknossos.org
       user-agent:
-      - python-httpx/0.24.1
+      - python-httpx/0.27.0
     method: GET
     uri: https://webknossos.org/api/v7/datasets/scalable_minds/l4dense_motta_et_al_demo
   response:
-    content: '{"name":"l4dense_motta_et_al_demo","dataSource":{"id":{"name":"l4dense_motta_et_al_demo","team":"scalable_minds"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[128,128,128],"width":5445,"height":8380,"depth":3285},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint8","adminViewConfiguration":{"alpha":100,"gammaCorrectionValue":1,"min":0,"color":[255,255,255],"max":255,"isInverted":false,"isInEditMode":false,"isDisabled":false,"intensityRange":[80,180]}},{"name":"predictions","category":"color","boundingBox":{"topLeft":[0,0,0],"width":5632,"height":8704,"depth":3584},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint24","adminViewConfiguration":{"alpha":100,"gammaCorrectionValue":1,"min":0,"color":[255,255,255],"max":255,"isInverted":false,"isInEditMode":false,"isDisabled":true,"intensityRange":[0,255]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[128,128,128],"width":5445,"height":8380,"depth":3285},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint32","largestSegmentId":2504697,"adminViewConfiguration":{"alpha":20,"gammaCorrectionValue":1,"color":[255,255,255],"isInverted":false,"isInEditMode":false,"isDisabled":false}}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"webknossos.org","url":"https://data-humerus.webknossos.org","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":["compute_mesh_file","infer_mitochondria","compute_segment_index_file","infer_nuclei","render_animation","infer_with_model","convert_to_wkw","train_model","infer_neurons","export_tiff","align_sections","materialize_volume_annotation","find_largest_segment_id"],"jobsEnabled":true},"owningOrganization":"scalable_minds","allowedTeams":[],"allowedTeamsCumulative":[],"isActive":true,"isPublic":true,"description":"Segmentation
-      created with [Voxelytics](https://scalableminds.com/voxelytics) by [scalable
-      minds](https://scalableminds.com).\n\n \n\nRaw SBEM data and segmentation ground
-      truth by Max Planck Institute for Brain Research. As published in *Dense connectomic
-      reconstruction in layer 4 of the somatosensory cortex* by A Motta, M Berning,
-      KM Boergens, B Staffler, M Beining, S Loomba, P Hennig, H Wissler, M Helmstaedter
-      in *Science* on 24 October 2019. [10.1126/science.aay3134](https://science.sciencemag.org/content/early/2019/10/23/science.aay3134)\n","displayName":"L4
-      Mouse Cortex Demo","created":1597232436055,"isEditable":false,"lastUsedByUser":1010101010101,"logoUrl":"https://static.webknossos.org/logos/scalableminds.svg","sortingKey":1597232436055,"details":null,"isUnreported":false,"tags":["demo","l4dense"],"folderId":"63889e760100005801712441","publication":null,"usedStorageBytes":null}'
+    body:
+      string: '{"name":"l4dense_motta_et_al_demo","dataSource":{"id":{"name":"l4dense_motta_et_al_demo","team":"scalable_minds"},"dataLayers":[{"name":"color","category":"color","boundingBox":{"topLeft":[128,128,128],"width":5445,"height":8380,"depth":3285},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint8","adminViewConfiguration":{"alpha":100,"gammaCorrectionValue":1,"min":0,"color":[255,255,255],"max":255,"isInverted":false,"isInEditMode":false,"isDisabled":false,"intensityRange":[80,180]}},{"name":"predictions","category":"color","boundingBox":{"topLeft":[0,0,0],"width":5632,"height":8704,"depth":3584},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint24","adminViewConfiguration":{"alpha":100,"gammaCorrectionValue":1,"min":0,"color":[255,255,255],"max":255,"isInverted":false,"isInEditMode":false,"isDisabled":true,"intensityRange":[0,255]}},{"name":"segmentation","category":"segmentation","boundingBox":{"topLeft":[128,128,128],"width":5445,"height":8380,"depth":3285},"resolutions":[[1,1,1],[2,2,1],[4,4,2],[8,8,4],[16,16,8],[32,32,16],[64,64,32],[128,128,64],[256,256,128],[512,512,256],[1024,1024,512]],"elementClass":"uint32","largestSegmentId":2504697,"adminViewConfiguration":{"alpha":20,"gammaCorrectionValue":1,"color":[255,255,255],"isInverted":false,"isInEditMode":false,"isDisabled":false}}],"scale":{"factor":[11.239999771118164,11.239999771118164,28],"unit":"nanometer"}},"dataStore":{"name":"webknossos.org","url":"https://data-humerus.webknossos.org","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":["compute_mesh_file","infer_mitochondria","compute_segment_index_file","infer_nuclei","render_animation","infer_with_model","convert_to_wkw","train_model","infer_neurons","export_tiff","align_sections","materialize_volume_annotation","find_largest_segment_id"],"jobsEnabled":true},"owningOrganization":"scalable_minds","allowedTeams":[],"allowedTeamsCumulative":[],"isActive":true,"isPublic":true,"description":"Segmentation
+        created with [Voxelytics](https://scalableminds.com/voxelytics) by [scalable
+        minds](https://scalableminds.com).\n\n \n\nRaw SBEM data and segmentation
+        ground truth by Max Planck Institute for Brain Research. As published in *Dense
+        connectomic reconstruction in layer 4 of the somatosensory cortex* by A Motta,
+        M Berning, KM Boergens, B Staffler, M Beining, S Loomba, P Hennig, H Wissler,
+        M Helmstaedter in *Science* on 24 October 2019. [10.1126/science.aay3134](https://science.sciencemag.org/content/early/2019/10/23/science.aay3134)\n","displayName":"L4
+        Mouse Cortex Demo","created":1597232436055,"isEditable":false,"lastUsedByUser":0,"logoUrl":"https://static.webknossos.org/logos/scalableminds.svg","sortingKey":1597232436055,"details":null,"isUnreported":false,"tags":["demo","l4dense"],"folderId":"63889e760100005801712441","publication":null,"usedStorageBytes":null}'
     headers:
       cache-control:
       - no-cache
@@ -39,6 +40,7 @@ interactions:
       - max-age=31536000; includeSubDomains
       x-permitted-cross-domain-policies:
       - master-only
-    http_version: HTTP/1.1
-    status_code: 200
+    status:
+      code: 200
+      message: OK
 version: 1
