--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yaml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yaml
@@ -17,8 +17,7 @@ interactions:
     method: POST
     uri: http://localhost:9000/api/v7/userToken/generate
   response:
-    body:
-      string: '{"token":"mmfagDH15pF5fXaolvM2uw"}'
+    content: '{"token":"xxxsecrettokenxxx"}'
     headers:
       cache-control:
       - no-cache
@@ -31,7 +30,6 @@ interactions:
       - origin-when-cross-origin, strict-origin-when-cross-origin
       x-permitted-cross-domain-policies:
       - master-only
-    status:
-      code: 200
-      message: OK
+    http_version: HTTP/1.1
+    status_code: 200
 version: 1
