--- a/webknossos/tests/cassettes/test_examples/test_upload_tiff_stack.yaml
+++ b/webknossos/tests/cassettes/test_examples/test_upload_tiff_stack.yaml
@@ -795,7 +795,7 @@ interactions:
     method: GET
     uri: http://localhost:9000/api/v7/datasets/Organization_X/tiff_dataset_2000-01-01_00-00-00
   response:
-    content: '{"name":"tiff_dataset_2024-07-23_09-10-13","dataSource":{"id":{"name":"tiff_dataset_2024-07-23_09-10-13","team":"Organization_X"},"dataLayers":[{"name":"tiff","category":"segmentation","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"resolutions":[[1,1,1],[2,2,2],[4,4,4]],"elementClass":"uint8","largestSegmentId":255}],"scale":{"factor":[12,12,12],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[],"allowedTeamsCumulative":[],"isActive":true,"isPublic":false,"description":null,"displayName":null,"created":1721725825371,"isEditable":true,"lastUsedByUser":1010101010101,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1721725825371,"details":null,"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":15053503}'
+    content: '{"name":"tiff_dataset_2024-07-30_14-50-45","dataSource":{"id":{"name":"tiff_dataset_2024-07-30_14-50-45","team":"Organization_X"},"dataLayers":[{"name":"tiff","category":"segmentation","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"resolutions":[[1,1,1],[2,2,2],[4,4,4]],"elementClass":"uint8","largestSegmentId":255}],"scale":{"factor":[12,12,12],"unit":"nanometer"}},"dataStore":{"name":"localhost","url":"http://localhost:9000","isScratch":false,"allowsUpload":true,"jobsSupportedByAvailableWorkers":[],"jobsEnabled":false},"owningOrganization":"Organization_X","allowedTeams":[],"allowedTeamsCumulative":[],"isActive":true,"isPublic":false,"description":null,"displayName":null,"created":1722351058910,"isEditable":true,"lastUsedByUser":1010101010101,"logoUrl":"/assets/images/mpi-logos.svg","sortingKey":1722351058910,"details":null,"isUnreported":false,"tags":[],"folderId":"570b9f4e4bb848d0885ea917","publication":null,"usedStorageBytes":15053503}'
     headers:
       cache-control:
       - no-cache
@@ -830,7 +830,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\"datasource-properties.json\">datasource-properties.json</a></li>\n
         \     \n        <li><a href=\".zgroup\">.zgroup</a></li>\n      \n        <li><a
@@ -874,7 +874,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\"datasource-properties.json\">datasource-properties.json</a></li>\n
         \     \n        <li><a href=\".zgroup\">.zgroup</a></li>\n      \n        <li><a
@@ -918,7 +918,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\"datasource-properties.json\">datasource-properties.json</a></li>\n
         \     \n        <li><a href=\".zgroup\">.zgroup</a></li>\n      \n        <li><a
@@ -949,7 +949,34 @@ interactions:
     uri: http://localhost:9000/data/zarr/Organization_X/tiff_dataset_2000-01-01_00-00-00/datasource-properties.json
   response:
     body:
-      string: '{"id":{"name":"tiff_dataset_2024-07-23_09-10-13","team":"Organization_X"},"dataLayers":[{"name":"tiff","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"elementClass":"uint8","mags":[{"mag":[1,1,1],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[2,2,2],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[4,4,4],"axisOrder":{"x":1,"y":2,"z":3,"c":0}}],"largestSegmentId":255,"numChannels":1,"category":"segmentation","dataFormat":"zarr"}],"scale":[12,12,12]}'
+      string: '{"id":{"name":"tiff_dataset_2024-07-30_14-50-45","team":"Organization_X"},"dataLayers":[{"name":"tiff","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"elementClass":"uint8","mags":[{"mag":[1,1,1],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[2,2,2],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[4,4,4],"axisOrder":{"x":1,"y":2,"z":3,"c":0}}],"largestSegmentId":255,"numChannels":1,"category":"segmentation","dataFormat":"zarr"}],"scale":[12,12,12]}'
+    headers:
+      access-control-allow-origin:
+      - '*'
+      access-control-max-age:
+      - '600'
+      cache-control:
+      - no-cache
+      content-length:
+      - '474'
+      content-type:
+      - application/json
+      date: Mon, 01 Jan 2000 00:00:00 GMT
+      referrer-policy:
+      - origin-when-cross-origin, strict-origin-when-cross-origin
+      x-permitted-cross-domain-policies:
+      - master-only
+    status:
+      code: 200
+      message: OK
+- request:
+    body: null
+    headers: {}
+    method: GET
+    uri: http://localhost:9000/data/zarr/Organization_X/tiff_dataset_2000-01-01_00-00-00/datasource-properties.json
+  response:
+    body:
+      string: '{"id":{"name":"tiff_dataset_2024-07-30_14-50-45","team":"Organization_X"},"dataLayers":[{"name":"tiff","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"elementClass":"uint8","mags":[{"mag":[1,1,1],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[2,2,2],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[4,4,4],"axisOrder":{"x":1,"y":2,"z":3,"c":0}}],"largestSegmentId":255,"numChannels":1,"category":"segmentation","dataFormat":"zarr"}],"scale":[12,12,12]}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -1007,7 +1034,7 @@ interactions:
     uri: http://localhost:9000/data/zarr/Organization_X/tiff_dataset_2000-01-01_00-00-00/datasource-properties.json
   response:
     body:
-      string: '{"id":{"name":"tiff_dataset_2024-07-23_09-10-13","team":"Organization_X"},"dataLayers":[{"name":"tiff","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"elementClass":"uint8","mags":[{"mag":[1,1,1],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[2,2,2],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[4,4,4],"axisOrder":{"x":1,"y":2,"z":3,"c":0}}],"largestSegmentId":255,"numChannels":1,"category":"segmentation","dataFormat":"zarr"}],"scale":[12,12,12]}'
+      string: '{"id":{"name":"tiff_dataset_2024-07-30_14-50-45","team":"Organization_X"},"dataLayers":[{"name":"tiff","boundingBox":{"topLeft":[0,0,0],"width":265,"height":265,"depth":257},"elementClass":"uint8","mags":[{"mag":[1,1,1],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[2,2,2],"axisOrder":{"x":1,"y":2,"z":3,"c":0}},{"mag":[4,4,4],"axisOrder":{"x":1,"y":2,"z":3,"c":0}}],"largestSegmentId":255,"numChannels":1,"category":"segmentation","dataFormat":"zarr"}],"scale":[12,12,12]}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -1047,7 +1074,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/1\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/1\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
@@ -1256,7 +1283,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/1\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/1\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
@@ -1299,7 +1326,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/2\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/2\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
@@ -1508,7 +1535,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/2\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/2\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
@@ -1551,7 +1578,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/4\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/4\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
@@ -1760,7 +1787,7 @@ interactions:
         Neue\", Helvetica, Arial,\n        sans-serif;\n        text-align: center\n
         \     }\n      \n      ul {\n        list-style: none;\n      }\n\n      p#hint
         {\n        color: #777;\n        margin-top: 4em\n      }\n    </style>\n
-        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-23_09-10-13/tiff/4\u201D
+        \ </head>\n  <body>\n    <p id=\"hint\">This is the WEBKNOSSOS Datastore \u201COrganization_X/tiff_dataset_2024-07-30_14-50-45/tiff/4\u201D
         folder.</p>\n    <p>The following are the contents of the folder:</p>\n    <ul>\n
         \     \n        <li><a href=\".zarray\">.zarray</a></li>\n      \n    </ul>\n
         \ </body>\n</html>\n"
