Add support for python version 3.12 (#1068)
* Update python version in toml file.

* Remove python version marker from CZI reader.

* Fix typecheck errors.

* Update poetry lock files.

* Update poetry from 1.6.1 to 1.8.2.

* upgrades a bunch of dependencies

* upgrade deps in cluster_tools

* Update poetry.lock.

* Remove own fixes for fixed bugs in vcr.

* update fastremap

* format

* cassettes

* Update cassettes.

* Run formatter, linter and typechecker.

* Update cassettes.

* Downgrade universal-pathlib to v0.1.4

* update upath

* fix upath bug, maybe?

* Update changelog.

* Remove official python 3.8 support.

* Update cluster_tools readme.

* Update changelog.

* Update ci.

* Update ci.yml

* Update ci.yml

---------

Co-authored-by: Norman Rzepka <code@normanrz.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       max-parallel: 4
       matrix:
         executors: [multiprocessing, slurm, kubernetes, dask]
-        python-version: ["3.11", "3.10", "3.9", "3.8"]
+        python-version: ["3.12", "3.11", "3.10", "3.9"]
     defaults:
       run:
         working-directory: cluster_tools
@@ -54,8 +54,8 @@ jobs:
         run: |
           cd ./dockered-slurm
 
-          echo docker-compose up
-          docker-compose up -d
+          echo docker compose up
+          docker compose up -d
 
           # Register cluster (with retry)
           for i in {1..5}; do
@@ -138,7 +138,7 @@ jobs:
           PYTEST_EXECUTORS=kubernetes poetry run python -m pytest -sv test_all.py test_kubernetes.py
 
       - name: Run dask tests
-        if: ${{ matrix.executors == 'dask' && matrix.python-version != '3.8' }}
+        if: ${{ matrix.executors == 'dask' }}
         run: |
           cd tests
           PYTEST_EXECUTORS=dask poetry run python -m pytest -sv test_all.py test_dask.py
@@ -152,7 +152,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.11", "3.10", "3.9", "3.8"]
+        python-version: ["3.12", "3.11", "3.10", "3.9"]
         group: [1, 2, 3]
       fail-fast: false
     defaults:
